<resources>
    <string name="app_name">Ahorcado</string>
    <string name="Secleccion">Seleccione la categoria que desea :</string>
    <string name="Animales">Animales</string>
    <string name="Ciudades">Ciudades</string>
    <string name="Frutas">Frutas</string>
    <string name="Paises">Paises</string>
    <string name="Comics">Comics</string>
    <string name="Aleatorio">Aleatorio</string>
    <string name="Nombres">Nombres</string>
    <string name="Siguente">  Jugar  </string>
    <string name="aux">DE LA CATEGORIA </string>
    <string name="vacio"> </string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="E">E</string>
    <string name="F">F</string>
    <string name="G">G</string>
    <string name="H">H</string>
    <string name="I">I</string>
    <string name="J">J</string>
    <string name="K">K</string>
    <string name="L">L</string>
    <string name="M">M</string>
    <string name="N">N</string>
    <string name="Ñ">Ñ</string>
    <string name="O">O</string>
    <string name="P">P</string>
    <string name="Q">Q</string>
    <string name="R">R</string>
    <string name="S">S</string>
    <string name="T">T</string>
    <string name="U">U</string>
    <string name="V">V</string>
    <string name="W">W</string>
    <string name="X">X</string>
    <string name="Y">Y</string>
    <string name="Z">Z</string>
    <string name="Puntaje">Puntajes más altos</string>
    <string name="linea">__</string>
</resources>
