<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryDark"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#fcfcfc"
    tools:context="com.example.usuario.ahorcado.MainActivity">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/Secleccion"
        android:id="@+id/textView"

        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="130sp"
        android:layout_height="wrap_content"
        android:text="@string/Siguente"
        android:textSize="30sp"
        android:textColor="@color/colorAzul"
        android:background="@drawable/rectagulo"
        android:id="@+id/button"
        android:scrollbarStyle="insideInset"
        android:layout_marginTop="40dp"

        android:layout_below="@+id/radiogrupo"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/radiogrupo"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Animales"
            android:textColor="@color/colornegro"
            android:textSize="20sp"
            android:id="@+id/radioButtonAnimales"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:checked="false" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Nombres"
            android:textColor="@color/colornegro"
            android:textSize="20sp"
            android:id="@+id/radioButtonNombres"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ciudades"
            android:textColor="@color/colornegro"
            android:textSize="20sp"
            android:id="@+id/radioButtonCiudades"
            android:layout_below="@+id/radioButtonAnimales"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Frutas"
            android:textColor="@color/colornegro"
            android:textSize="20sp"
            android:id="@+id/radioButtonFrutas"
            android:layout_below="@+id/radioButtonPaises"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Paises"
            android:textColor="@color/colornegro"
            android:textSize="20sp"
            android:id="@+id/radioButtonPaises"
            android:layout_below="@+id/radioButtonPaises"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Comics"
            android:textColor="@color/colornegro"
            android:textSize="20sp"
            android:id="@+id/radioButtonComics"
            android:layout_below="@+id/radioButtonPaises"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Aleatorio"
            android:textColor="@color/colornegro"
            android:textSize="20sp"
            android:id="@+id/radioButtonAleatorio"
            android:layout_below="@+id/radioButtonFrutas"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"/>
    </RadioGroup>
</RelativeLayout>
</LinearLayout>